1:增加shift+鼠标滚动 移动nav 2:增加几个按钮可以输入时间 所以说,我在工具上花费的时间比在正式的事情上要多那么一点点.